Prevent cropping of outlines on buttons

--- a/res/themes/light-high-contrast/css/_light-high-contrast.scss
+++ b/res/themes/light-high-contrast/css/_light-high-contrast.scss
@@ -67,6 +67,10 @@ $event-highlight-fg-color: $warning-color;
     text-decoration: none;
 }
 
+.mx_AccessibleButton {
+    margin-left: 4px;
+}
+
 .mx_AccessibleButton:focus {
     outline: 2px solid $accent-color;
     outline-offset: 2px;
